plugins {
    id 'pl.allegro.tech.build.axion-release' version '1.17.2'
    id 'java'
    id 'maven-publish'
}

apply plugin: 'java'

sourceCompatibility = 17
targetCompatibility = 17
ext.rundeckPluginVersion = '1.2'
ext.pluginClassNames='edu.ohio.ais.rundeck.HttpWorkflowStepPlugin,edu.ohio.ais.rundeck.HttpWorkflowNodeStepPlugin'
ext.pluginName = 'Rundeck Http Step'
ext.pluginDescription = 'A workflow plugin that makes HTTP requests'
group = 'com.rundeck.plugins'

scmVersion {
    ignoreUncommittedChanges = false
    tag {
        prefix = ''           // NO "v" prefix - see PLUGIN_TAGGING_ARCHITECTURE.md
        versionSeparator = ''
    }
}

version = scmVersion.version  // Dynamic version from git tag

repositories {
    mavenLocal()
    maven {
        name = 'Central Portal Snapshots'
        url = 'https://central.sonatype.com/repository/maven-snapshots/'
        content {
            includeGroup('org.rundeck')
        }
    }
    maven {
        name = 'Central Portal Snapshots'
        url = 'https://central.sonatype.com/repository/maven-snapshots/'
        
        // Only search this repository for org.rundeck snapshots
        content {
            includeGroup('org.rundeck')
        }
    }
    mavenCentral()
}

configurations{
    //declare custom pluginLibs configuration to include only libs for this plugin
    pluginLibs

    //declare compile to extend from pluginLibs so it inherits the dependencies
    implementation {
        extendsFrom pluginLibs
    }
}

dependencies {
    implementation 'org.rundeck:rundeck-core:6.0.0-SNAPSHOT'
    
    // Add secure commons-lang3 to provide alternative to vulnerable commons-lang 2.6
    // Version 3.17.0 required for Grails 7 / Spring Boot compatibility
    pluginLibs 'org.apache.commons:commons-lang3:3.17.0'

    pluginLibs group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.14'
    pluginLibs group: 'com.google.code.gson', name: 'gson', version:'2.10.1'

    testImplementation group: 'com.github.tomakehurst', name: 'wiremock-standalone', version:'2.23.2'
    testImplementation group: 'junit', name: 'junit', version:'4.13.2'

    testImplementation (
            'org.mockito:mockito-all:1.9.5',
            'org.powermock:powermock-module-junit4:1.5',
            'org.powermock:powermock-api-mockito:1.5'
    )
}

configurations.all {
    resolutionStrategy {
        // Replace vulnerable commons-lang with secure commons-lang3
        // Version 3.17.0 required for Grails 7 / Spring Boot compatibility
        dependencySubstitution {
            substitute module('commons-lang:commons-lang') using module('org.apache.commons:commons-lang3:3.17.0')
        }
    }
}


test {
    useJUnit()
    
    // Java 17+ module access for reflection/mocking
    jvmArgs = [
        '--add-opens=java.base/java.lang=ALL-UNNAMED',
        '--add-opens=java.base/java.util=ALL-UNNAMED',
        '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
        '--add-opens=java.base/java.net=ALL-UNNAMED'
    ]
}

jar {
    // Include plugin dependencies in lib/ directory
    into('lib') {
        from configurations.pluginLibs
    }
    
    manifest {
        def libList = configurations.pluginLibs.collect{'lib/'+it.name}.join(' ')

        attributes 'Rundeck-Plugin-Classnames': pluginClassNames
        attributes 'Rundeck-Plugin-File-Version': version
        attributes 'Rundeck-Plugin-Name': pluginName
        attributes 'Rundeck-Plugin-Description': pluginDescription
        attributes 'Rundeck-Plugin-Rundeck-Compatibility-Version': '3.x'
        attributes 'Rundeck-Plugin-Tags': 'java,WorkflowStep'
        attributes 'Rundeck-Plugin-License': 'Apache 2.0'
        attributes 'Rundeck-Plugin-Source-Link': 'https://github.com/rundeck-plugins/http-step'
        attributes 'Rundeck-Plugin-Target-Host-Compatibility': 'all'
        attributes 'Rundeck-Plugin-Version': rundeckPluginVersion
        attributes 'Rundeck-Plugin-Archive': 'true'
        attributes 'Rundeck-Plugin-Libs': "${libList}"
    }
}

publishing {
    publications {
        maven(MavenPublication) {
            groupId = 'com.rundeck.plugins'
            artifactId = 'http-step'
            version = project.version
            from components.java
        }
    }
    
    repositories {
        maven {
            name = "PackageCloudTest"
            url = uri("https://packagecloud.io/pagerduty/rundeckpro-test/maven2")
            authentication {
                header(HttpHeaderAuthentication)
            }
            credentials(HttpHeaderCredentials) {
                name = "Authorization"
                value = "Bearer " + (System.getenv("PKGCLD_WRITE_TOKEN") ?: project.findProperty("pkgcldWriteToken"))
            }
        }
    }
}
